@@ -7,6 +7,10 @@
     2. /var/cache/edb/world is now /var/lib/portage/world.
     3. /etc/portage/profile/virtuals is _USER_ configs only.
 
+  15 Nov 2004; Marius Mauch <genone@gentoo.org> bin/ebuild-default-functions.sh:
+  NEVER try to change permissions on symlinks, stupid chmod will change the
+  referenced files instead (fixed the portage uid/gid checks in dyn_install)
+
   15 Nov 2004; Nicholas Jones <carpaski@gentoo.org> portage.py, portage_gpg.py:
   Fixes for the gso changes in gpg. Removed the 'virtuals' file handling
   which caused an empty file to be recreated. Added XXX marks on potentially
